# SPN

./: .gitignore  CMakeLists.txt  Makefile  batch_learning.cpp  contributors.txt  license.txt  online_em.sh  online_learning.cpp  readme.html  readme.md  run_online.sh  st_learn.cpp  stream_learning.cpp
2015-opt/final report/: BL-SPN.aux  BL-SPN.blg  BL-SPN.out  BL-SPN.tex  Makefile  reference.bib
2015-opt/final report/figures/: SPN-example.tex  draw_curve.py  spntemplate.tex
2015-opt/poster/: beamerthemeconfposter.sty  refs.bib  spn-poster.aux  spn-poster.blg  spn-poster.tex
2015-opt/results/: CVB.numbers
src/: BatchParamLearning.cpp  BatchParamLearning.h  OnlineParamLearning.cpp  OnlineParamLearning.h  SPNNode.cpp  SPNNode.h  SPNetwork.cpp  SPNetwork.h  StreamParamLearning.cpp  StreamParamLearning.h  StructureLearning.cpp  StructureLearning.h  fmath.hpp  utils.cpp  utils.h
